--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     .door-number{font-size:2.2rem;font-weight:700;color:var(--white);text-shadow:1px 2px 6px rgba(0,0,0,0.25)}
     .door-sub{font-size:0.8rem;color:var(--white);opacity:0.95;margin-top:6px}
     .door-back{background:var(--white);transform:rotateY(180deg);padding:14px;border:3px solid var(--accent-2);}
-    .door-back-content{font-size:0.9rem;color:var(--dark);text-align:center;overflow:hidden}
+    .door-back-content{font-size:0.9rem;color:var(--dark);text-align:center;overflow:hidden;padding: 12px;}
 
     .today {
       box-shadow: 0 0 30px 6px #7CFC00, 0 0 60px 12px #32CD32; /* larger pulsating green */
