--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     .door-front{background:linear-gradient(135deg,var(--accent) 0%, #ff8a5c 100%);border:3px solid var(--dark);}
     .door-number{font-size:2.2rem;font-weight:700;color:var(--white);text-shadow:1px 2px 6px rgba(0,0,0,0.25)}
-    .door-sub{font-size:0.8rem;color:var(--white);opacity:0.95;margin-top:6px}
+    .door-sub{font-size:0.8rem;color:var(--white);opacity:0.95;margin-top:6px;padding: 12px;}
     .door-back{background:var(--white);transform:rotateY(180deg);padding:14px;border:3px solid var(--accent-2);}
     .door-back-content{font-size:0.9rem;color:var(--dark);text-align:center;overflow:hidden;padding: 12px;}
 
