--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       ) 30;
     }
 
-    .modal-content::before {
+    /*.modal-content::before {
       content: '🎄';
       position: absolute;
       top: -10px;
@@ -237,7 +237,7 @@
       right: 20px;
       font-size: 2.5em;
       z-index: 10;
-    }
+    }*/
 
     .modal-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:20px;padding-bottom:16px;border-bottom:3px solid var(--accent-2)}
     .modal-day{font-size:2rem;color:var(--accent);font-weight:700}
