--- a/index_CSV.html
+++ b/index_CSV.html
@@ -618,7 +618,7 @@
   const actionButton = document.getElementById("action-button");
   const closeBtn = document.getElementById("close-btn");
 
-  function (item, day) {
+  function openModal(item, day) {
     console.log("📬 Opening modal for day:", day, item);
 
     modalDay.textContent = "Dag " + day;
