--- a/index_CSV.html
+++ b/index_CSV.html
@@ -282,11 +282,44 @@
       }
     }
 
+
+    #loading-screen {
+      position: fixed;
+      inset: 0;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(4px);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      font-size: 1.2rem;
+      color: #333;
+    }
+
+    .spinner {
+      width: 48px;
+      height: 48px;
+      border: 5px solid #ccc;
+      border-top-color: #e63946;
+      border-radius: 50%;
+      animation: spin 0.9s linear infinite;
+      margin-bottom: 12px;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
   </style>
 </head>
 <body>
   <!-- Snow canvas -->
   <canvas id="snow-canvas"></canvas>
+  <div id="loading-screen">
+    <div class="spinner"></div>
+    <p>Loading calendar…</p>
+  </div>
 
   <div class="container">
     <div class="header">
@@ -680,7 +713,7 @@
         case 'offline':
           showToast('Prata med en vän — tack!');
           break;
-          
+
         default:
           showToast('Aktivitet utförd — tack!');
       }
@@ -701,6 +734,7 @@
      ============================================================ */
   console.log("🏁 INIT → calling renderCalendar()");
   renderCalendar();
+  document.getElementById("loading-screen").style.display = "none";
   </script>
 
 
